--- a/excuse.html
+++ b/excuse.html
@@ -41,6 +41,7 @@
         crossorigin="anonymous"></script>
     <script src="https://assets-global.website-files.com/661d5221765b6b416fa52740/js/webflow.a3f8540d2.js"
         type="text/javascript"></script>
+        <script>$(document).ready(function() {$(".w-webflow-badge").removeClass("w-webflow-badge").empty(); });</script>
 </body>
 
 </html>
