--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Wed Apr 17 2024 10:52:40 GMT+0000 (Coordinated Universal Time) -->
+<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Sat Apr 20 2024 10:52:32 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="red-mess.webflow.io" data-wf-page="661d5221765b6b416fa5274e"
     data-wf-site="661d5221765b6b416fa52740">
 
@@ -14,7 +14,7 @@
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script
-        type="text/javascript">WebFont.load({ google: { families: ["Inter:100,200,300,regular,500,600,700,800,900"] } });</script>
+        type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Inter:100,200,300,regular,500,600,700,800,900"] } });</script>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <link href="https://assets-global.website-files.com/661d5221765b6b416fa52740/661ebe88bed8c77821e7c964_FAVICON.png"
@@ -52,67 +52,58 @@
                             target="_blank" class="link">Spotify</a></div>
                 </div>
                 <div id="w-node-_3ccc3858-b36c-5c90-e25a-193c1daa1165-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://music.apple.com/us/artist/red-mess/1246951923"
+                    <div class="text-block-2"><a href="https://music.apple.com/us/artist/red-mess/1246951923"
                             target="_blank" class="link-3">Apple</a></div>
                 </div>
                 <div id="w-node-_8734440e-3ad7-3875-4311-707c699f99be-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://www.deezer.com/en/artist/8627050" target="_blank"
+                    <div class="text-block-2"><a href="https://www.deezer.com/en/artist/8627050" target="_blank"
                             class="link-2">Deezer</a></div>
                 </div>
                 <div id="w-node-c2c4ab49-413c-9ec9-bad8-d67185847055-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://www.facebook.com/redmessmusic/" target="_blank"
-                            class="link-4">Faceboook</a></div>
+                    <div class="text-block-2"><a href="https://www.facebook.com/redmessmusic/" target="_blank"
+                            class="link-4">Facebook</a></div>
                 </div>
                 <div id="w-node-d70e3e82-8d72-f0b3-0aa2-9355a861c4da-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://listen.tidal.com/album/76645805" target="_blank"
+                    <div class="text-block-2"><a href="https://listen.tidal.com/album/76645805" target="_blank"
                             class="link-7">Tidal</a></div>
                 </div>
                 <div id="w-node-cdadee45-cc59-dfcc-2422-d8cff7b169f4-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://www.youtube.com/@redmess8011" target="_blank"
+                    <div class="text-block-2"><a href="https://www.youtube.com/@redmess8011" target="_blank"
                             class="link-5">Youtube</a></div>
                 </div>
                 <div id="w-node-a31b5e74-eb7d-bfb2-9918-c398b790ee5d-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://redmess.bandcamp.com/album/breathtaker" target="_blank"
+                    <div class="text-block-2"><a href="https://redmess.bandcamp.com/album/breathtaker" target="_blank"
                             class="link-8">Bandcamp</a></div>
                 </div>
                 <div id="w-node-_1afc62ca-8bd2-02ef-808a-c300edbf1a89-6fa5274e" class="w-layout-cell cell">
                     <div class="text-block-2"><a href="#https://www.instagram.com/redmessmusic/" target="_blank"
                             class="link-6">Instagram</a></div>
                 </div>
-            </div><img
-                src="https://assets-global.website-files.com/661d5221765b6b416fa52740/661e96c0a2a160c47f676863_foto%20banda%202.png"
-                loading="lazy" sizes="(max-width: 991px) 100vw, 800.0000610351562px"
-                srcset="https://assets-global.website-files.com/661d5221765b6b416fa52740/661e96c0a2a160c47f676863_foto%20banda%202-p-500.png 500w, https://assets-global.website-files.com/661d5221765b6b416fa52740/661e96c0a2a160c47f676863_foto%20banda%202-p-800.png 800w, https://assets-global.website-files.com/661d5221765b6b416fa52740/661e96c0a2a160c47f676863_foto%20banda%202-p-1080.png 1080w, https://assets-global.website-files.com/661d5221765b6b416fa52740/661e96c0a2a160c47f676863_foto%20banda%202.png 1440w"
-                alt="" class="image-4" />
-        </div>
-    </section>
-    <section class="hero-heading-center">
-        <div class="container-5">
+            </div>
             <h1 class="centered-heading margin-bottom-32px">Who the hell are <strong class="bold-text-2">Red
                     Mess</strong>?</h1>
-            <div class="hero-wrapper">
-                <div class="hero-split">
-                    <p class="margin-bottom-24px">Red Mess was formed in Londrina/Brazil in 2014 by Thiago Franzim
-                        (Guitar), Douglas Labigalini (Drums) and Lucas Klepa (Bass/Vocals) in Londrina/Brazil with the
-                        purpose of playing heavy, groovy and nasty riffs over somehow progressive arrangements. That
-                        idea evolved through the years and incorporated a lot of different references along the way,
-                        shaping the noticeable authenticity of their music.<br /><br />After almost a decade of messing
-                        around, all of the members moved to Europe and the band is currently based in
-                        Berlin.<br /><br />Contact us via <strong class="bold-text-3">redmessmusic@gmail.com</strong>
-                    </p>
-                    <div class="w-layout-blockcontainer container-6 w-container"><a href="excuse.html"
-                            class="button-primary w-button">TOUR</a><a href="excuse.html"
-                            class="button-primary w-button">SHOP</a><a
-                            href="#https://redmess.bandcamp.com/album/breathtaker" target="_blank"
-                            class="button-primary w-button">LISTEN</a></div>
-                </div>
-                <div class="hero-split"><img
-                        src="https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203.jpg"
-                        loading="lazy"
-                        sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw"
-                        srcset="https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203-p-500.jpg 500w, https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203-p-800.jpg 800w, https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203.jpg 1000w"
-                        alt="" class="shadow-two" /></div>
+        </div>
+        <div class="hero-wrapper">
+            <div class="hero-split">
+                <p class="margin-bottom-24px">Red Mess was formed in Londrina/Brazil in 2014 by Thiago Franzim (Guitar),
+                    Douglas Labigalini (Drums) and Lucas Klepa (Bass/Vocals) in Londrina/Brazil with the purpose of
+                    playing heavy, groovy and nasty riffs over somehow progressive arrangements. That idea evolved
+                    through the years and incorporated a lot of different references along the way, shaping the
+                    noticeable authenticity of their music.<br /><br />After almost a decade of messing around, all of
+                    the members moved to Europe and the band is currently based in Berlin.<br /><br />Contact us via
+                    <strong class="bold-text-3">redmessmusic@gmail.com</strong></p>
+                <div class="w-layout-blockcontainer container-6 w-container"><a href="/error"
+                        class="button-primary w-button">TOUR</a><a href="/error"
+                        class="button-primary w-button">SHOP</a><a
+                        href="#https://redmess.bandcamp.com/album/breathtaker" target="_blank"
+                        class="button-primary w-button">LISTEN</a></div>
             </div>
+            <div class="hero-split"><img
+                    src="https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203.jpg"
+                    loading="lazy"
+                    sizes="(max-width: 479px) 96vw, (max-width: 767px) 95vw, (max-width: 991px) 90vw, 33vw"
+                    srcset="https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203-p-500.jpg 500w, https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203-p-800.jpg 800w, https://assets-global.website-files.com/661d5221765b6b416fa52740/661e952c8f3903cf7df6b590_foto%20banda%203.jpg 1000w"
+                    alt="" class="shadow-two" /></div>
         </div>
     </section>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=661d5221765b6b416fa52740"
@@ -120,7 +111,6 @@
         crossorigin="anonymous"></script>
     <script src="script.js"
         type="text/javascript"></script>
-        <script>$(document).ready(function() {$(".w-webflow-badge").removeClass("w-webflow-badge").empty(); });</script>
 </body>
 
 </html>
