--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     noticeable authenticity of their music.<br /><br />After almost a decade of messing around, all of
                     the members moved to Europe and the band is currently based in Berlin.<br /><br />Contact us via
                     <strong class="bold-text-3">redmessmusic@gmail.com</strong></p>
-                <div class="w-layout-blockcontainer container-6 w-container"><a href="/error"
-                        class="button-primary w-button">TOUR</a><a href="/error"
+                <div class="w-layout-blockcontainer container-6 w-container"><a href="excuse.html"
+                        class="button-primary w-button">TOUR</a><a href="excuse.html"
                         class="button-primary w-button">SHOP</a><a
                         href="#https://redmess.bandcamp.com/album/breathtaker" target="_blank"
                         class="button-primary w-button">LISTEN</a></div>
