--- a/index.html
+++ b/index.html
@@ -51,31 +51,31 @@
                             target="_blank" class="link">Spotify</a></div>
                 </div>
                 <div id="w-node-_3ccc3858-b36c-5c90-e25a-193c1daa1165-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://music.apple.com/us/artist/red-mess/1246951923"
+                    <div class="text-block-2"><a href="https://music.apple.com/us/artist/red-mess/1246951923"
                             target="_blank" class="link-3">Apple</a></div>
                 </div>
                 <div id="w-node-_8734440e-3ad7-3875-4311-707c699f99be-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://www.deezer.com/en/artist/8627050" target="_blank"
+                    <div class="text-block-2"><a href="https://www.deezer.com/en/artist/8627050" target="_blank"
                             class="link-2">Deezer</a></div>
                 </div>
                 <div id="w-node-c2c4ab49-413c-9ec9-bad8-d67185847055-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://www.facebook.com/redmessmusic/" target="_blank"
+                    <div class="text-block-2"><a href="https://www.facebook.com/redmessmusic/" target="_blank"
                             class="link-4">Facebook</a></div>
                 </div>
                 <div id="w-node-d70e3e82-8d72-f0b3-0aa2-9355a861c4da-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://listen.tidal.com/album/76645805" target="_blank"
+                    <div class="text-block-2"><a href="https://listen.tidal.com/album/76645805" target="_blank"
                             class="link-7">Tidal</a></div>
                 </div>
                 <div id="w-node-cdadee45-cc59-dfcc-2422-d8cff7b169f4-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://www.youtube.com/@redmess8011" target="_blank"
+                    <div class="text-block-2"><a href="https://www.youtube.com/@redmess8011" target="_blank"
                             class="link-5">Youtube</a></div>
                 </div>
                 <div id="w-node-a31b5e74-eb7d-bfb2-9918-c398b790ee5d-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://redmess.bandcamp.com/album/breathtaker" target="_blank"
+                    <div class="text-block-2"><a href="https://redmess.bandcamp.com/album/breathtaker" target="_blank"
                             class="link-8">Bandcamp</a></div>
                 </div>
                 <div id="w-node-_1afc62ca-8bd2-02ef-808a-c300edbf1a89-6fa5274e" class="w-layout-cell cell">
-                    <div class="text-block-2"><a href="#https://www.instagram.com/redmessmusic/" target="_blank"
+                    <div class="text-block-2"><a href="https://www.instagram.com/redmessmusic/" target="_blank"
                             class="link-6">Instagram</a></div>
                 </div>
             </div>
