--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     the members moved to Europe and the band is currently based in Berlin.<br /><br />Contact us via
                     <strong class="bold-text-3">redmessmusic@gmail.com</strong></p>
                 <div class="w-layout-blockcontainer container-6 w-container">
-                        <a href="excuse.html"
+                        <a href="https://www.songkick.com/artists/10208165-red-mess"
                         class="button-primary w-button">TOUR</a>
                         <a href="excuse.html"
                         class="button-primary w-button">SHOP</a>
