--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="hero-wrapper">
             <div class="hero-split">
-                <h1 class="margin-bottom-32px">Who the hell are <strong class="bold-text-2">Red
+                <h1 class="central-heading margin-bottom-32px">Who the hell are <strong class="bold-text-2">Red
                     Mess</strong>?</h1>
                 <p class="margin-bottom-24px">Red Mess was formed in Londrina/Brazil in 2014 by Thiago Franzim (Guitar),
                     Douglas Labigalini (Drums) and Lucas Klepa (Bass/Vocals) in Londrina/Brazil with the purpose of
