--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/jpeg" href="/src/assets/favicon.jpg" />
 
     <meta property="og:title" content="Red Mess" />
-    <meta property="og:description" content="Official website for Red Mess." />
+    <meta property="og:description" content="Crooked and Crimson - Official website for Red Mess." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.redmess.com.br" />
     
